Simge ve Arayüz Değişiklikleri

--- a/Trafik-Cezasi-Yonetimi/AnaMenu.resx
+++ b/Trafik-Cezasi-Yonetimi/AnaMenu.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAA+EXj/PhF4/zsOdv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsO
+        dv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsOdv87Dnb/Ow52/zsO
+        dv89EHj/PhF4/z4ReP9DF3v/XTeN/2E8kP9hPJD/YTyQ/2E8kP9hPJD/YTyQ/2E8kP9hPJD/YTyQ/2E8
+        kP9hPJD/YTyQ/2E8kP9hPJD/YTyQ/2E8kP9hPJD/YTyQ/2E8kP9hPJD/YTyQ/2E8kP9hPJD/YTyQ/2E8
+        kP9hPJD/XjiO/0QYfP8+EHj/PA93/1YuiP/d1uf/9PH3//Xy+P/18vj/9fL4//Xy+P/18vj/9fL4//Xy
+        +P/18vj/9fL4//Lv9v/y7/X/9fL4//Xy+P/18vj/9fL4//Xy+P/18vj/9fL4//Xy+P/18vj/9fL4//Xy
+        +P/18vj/9fL4//Px9//i3Ov/XDaN/zwOdv88D3f/VzCK/+vm8f/p5PD/t6bN/7alzP+2pcz/tqXM/7al
+        zP+2pcz/tqXM/7alzP+4p83/6+fx//Xz+P+9rdH/tqTM/7alzP+2pcz/tqXM/7alzP+2pcz/tqXM/7al
+        zP+2pcz/tqXM/7alzP+2pcz/5d/t//Dt9f9eOI7/PA52/zwPd/9XMIr/7eny/8O11f9BFHr/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/0MXe//Lv9v/5N7s/1AnhP89EHf/PhF4/z4ReP8+EXj/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP+5qc7/8u/2/104jv88Dnb/PA93/1cwiv/t6fL/w7XV/0EU
+        ev8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/Qxd7/8u/2//k3uz/UCeE/z0Qd/8+EXj/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/7mpzv/y7/b/XTeO/zwOdv88D3f/VzCK/+3p
+        8v/DtdX/QRR6/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP9DF3v/y7/b/+Te7P9QJ4T/PRB3/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/uanO//Lu9v9dN43/PA52/zwP
+        d/9XMIr/7eny/8O11f9BFHr/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/0MXe//Lv9v/5N7s/1An
+        hP89D3f/PA92/zsOdv87Dnb/Ow52/zsOdv87Dnb/PRB4/z4ReP8+EXj/PhF4/z4ReP+5qc7/8e71/1w2
+        jf88Dnb/PA93/1cwiv/t6fL/w7XV/0EUev8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/Qxd7/8u/
+        2//k3uz/UCeE/0ATef9gO5D/aEaV/2hFlf9oRZX/aEWV/2ZCk/9HHH7/PRB4/z4ReP8+EXj/PhF4/7mp
+        zv/x7vX/XDaN/zwOdv88D3f/VzCK/+3p8v/DtdX/QRR6/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4R
+        eP9DF3v/y7/b/+Te7P9PJoT/SR+A/9PJ4P/39vr/9fP4//Xz+P/29Pj/6+bx/2RAk/88Dnb/PhF4/z4R
+        eP8+EXj/uanO//Ht9f9bNY3/PA52/zwPd/9XMIr/7eny/8O11f9BFHr/PhF4/z4ReP8+EXj/PhF4/z4R
+        eP8+EXj/PhF4/0MXe//Lv9v/5N7s/08mhP9KIID/29Lm///////////////////////08vf/ZkKU/zwO
+        dv8+EXj/PhF4/z4ReP+5qc7/8O31/1s1jP88Dnf/PA93/1cwiv/t6fL/w7XV/0ATev89EHj/PRB4/z0Q
+        eP89EHj/PRB4/z0QeP89EHj/QhZ7/8u+2//k3uz/TyaE/0oggP/b0ub///////////////////////Ty
+        9/9mQpT/PA52/z4ReP8+EXj/PhF4/7mpzv/w7fX/WzSM/zwOd/88D3f/VzCK/+3p8v/Gudf/Sh+A/0cc
+        fv9HHH7/Rxx+/0ccfv9HHH7/Rxx+/0ccfv9MIoH/zcLc/+Te7P9PJoT/SiCA/9vS5v//////////////
+        ////////9PL3/2ZClP88Dnb/PhF4/z4ReP8+EXj/uanO//Ds9P9aNIz/PA53/zwPd/9XMIr/6+bx//Pw
+        9//WzOL/1cvi/9XL4v/Vy+L/1cvi/9XL4v/Vy+L/1cvi/9bM4//18/j/4tvr/08mhP9KIID/29Lm////
+        ///////////////////08vf/ZkKU/zwOdv8+EXj/PhF4/z4ReP+5qc7/8Oz0/1o0jP88Dnf/PA93/1cw
+        iv/q5vH/9fP4/9zV5//c1Of/3NTn/9zU5//c1Of/3NTn/9zU5//c1Of/3NTn/9zU5//CtNT/TCKC/0gd
+        f/+9rtH/3NTm/9rS5f/a0uX/29Pl/9HH3/9eOY//PA93/z4ReP8+EXj/PhF4/7mpzv/v7PT/WjOL/zwO
+        d/88D3f/VzCK/+3p8v/Hutj/TSOD/0oggf9KIIH/SiCB/0oggf9JH4D/SR+A/0kfgP9JH4D/SR+A/0cd
+        f/8/Enn/PxJ5/0ccf/9JH4D/SR+A/0kfgP9JH4D/SB5//z8Tef89EHf/PRB3/z0Qd/89EHf/uanO/+/r
+        9P9ZM4v/PA93/zwPd/9XMIr/7enz/8O11f9AE3n/PRB3/z0Qd/89EHf/QRV6/1Anhf9SKYb/UimG/1Ip
+        hv9SKYb/TyWE/0ATef8/Enn/TCKC/08mhP9PJoT/TyaE/08mhP9PJoT/UCeF/1Anhf9QJ4X/UCeF/1An
+        hf/AsdP/7urz/1kyi/88D3f/PA93/1cwiv/t6fL/w7XV/0EUev8+EXj/PhF4/zwPd/9dN43/2c/k/+bf
+        7f/l3uz/5d7s/+fg7f/KvNn/SyGB/0gdf//DtdT/5d7s/+Xf7f/l3+3/5d/t/+Xf7f/l3+3/5d/t/+Xf
+        7f/l3+3/5d/t//f1+f/r5/H/WTKL/zwPd/88D3f/VzCK/+3p8v/DtdX/QRR6/z4ReP8+EXj/PA52/2E9
+        kf/x7vX//////////////////////9/Y6f9NJIP/SiCA/9vT5v/18/j/zcLd/8u/2//Lv9v/y7/b/8u/
+        2//Lv9v/y7/b/8u/2//Lv9v/7enz/+zn8f9YMYr/PA93/zwPd/9XMIr/7eny/8O11f9BFHr/PhF4/z4R
+        eP88Dnb/YT2R//Hu9f//////////////////////39jp/00kg/9KIID/3dXn/9XL4f9LIYH/QxZ7/0MX
+        e/9DF3v/Qxd7/0MXe/9DF3v/Qxd7/0MXe/+7q8//7urz/1gxiv88D3f/PA93/1cwiv/t6fL/w7XV/0EU
+        ev8+EXj/PhF4/zwOdv9hPZH/8e71///////////////////////f2On/TSSD/0oggP/d1ef/1Mrh/0Yb
+        fv89EHj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/7mpzv/t6fP/WDGK/zwPd/88D3f/VzCK/+3p
+        8v/DtdX/QRR6/z4ReP8+EXj/PA52/2E9kf/x7vX//////////////////////9/Y6f9NJIP/SiCA/93V
+        5//UyuH/Rht+/z0QeP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/uanO/+3p8v9XMIr/PA93/zwP
+        d/9XMIr/7eny/8O11f9BFHr/PhF4/z4ReP88Dnf/XjmP/+Hb6v/v6/T/7urz/+7q8//w7PT/0cbf/0wi
+        gv9KIID/3dXn/9TK4f9GG37/PRB4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP+5qc7/7eny/1cw
+        if88D3f/PA93/1cwiv/t6fL/w7XV/0EUev8+EXj/PhF4/z4ReP9EGHz/WzSM/103jf9dN43/XTeN/103
+        jf9YMYr/QBN5/0shgf/d1ef/1Mrh/0Ybfv89EHj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PhF4/7mp
+        zv/s6PL/Vy+J/zwPd/88D3f/VzCK/+3p8v/DtdX/QRR6/z4ReP8+EXj/PhF4/z4ReP88D3f/PA93/zwP
+        d/88D3f/PA93/zwPd/89EHf/SyGB/93V5//UyuH/Rht+/z0QeP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4R
+        eP8+EXj/uanO/+zo8v9WL4n/PA93/zwPd/9XMIr/7eny/8O11f9BFHr/PhF4/z4ReP8+EXj/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/z0Qd/9LIYH/3dXn/9TK4f9GG37/PRB4/z4ReP8+EXj/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP+5qc7/7Ofy/1Yuif88D3f/PA93/1cwiv/t6fL/w7XV/0EUev8+EXj/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/z4ReP8+EXj/PRB3/0shgf/d1ef/1Mrh/0Ybfv89EHj/PhF4/z4R
+        eP8+EXj/PhF4/z4ReP8+EXj/PhF4/7qpzv/s5/H/Vi6I/zwPd/88D3f/VzCK/+3p8v/Ettb/QxZ7/0AT
+        ef9AE3n/QBN5/0ATef9AE3n/QBN5/0ATef9AE3n/QBN5/0ATef8/Enj/TSOC/93V5//UyuH/SB1//0AS
+        ef9AE3n/QBN5/0ATef9AE3n/QBN5/0ATef9AE3n/uqrP/+vn8f9VLoj/PA93/zwPd/9XMIr/6+bx/+3o
+        8v/Cs9X/wbLU/8Gy1P/BstT/wbLU/8Gy1P/BstT/wbLU/8Gy1P/BstT/wbLU/8Gy1P/Ft9f/9PH3//Hu
+        9f/Etdb/wbLU/8Gy1P/BstT/wbLU/8Gy1P/BstT/wbLU/8Gy1P/q5fD/6ePv/1UtiP88D3f/PA93/1Ut
+        iP/Yz+T/7erz/+/r9P/v6/T/7+v0/+/r9P/v6/T/7+v0/+/r9P/v6/T/7+v0/+/r9P/v6/T/7+v0/+/r
+        9P/s6PL/7Ojy/+/r9P/v6/T/7+v0/+/r9P/v6/T/7+v0/+/r9P/v6/T/7+v0/+7q8//WzeL/UiqG/zwP
+        d/8+EXj/QhV7/1Yuif9ZMov/WTKL/1kyi/9ZMov/WTKL/1kyi/9ZMov/WTKL/1kyi/9ZMov/WTKL/1ky
+        i/9ZMov/WTKL/1kyi/9ZMov/WTKL/1kyi/9ZMov/WTKL/1kyi/9ZMov/WTKL/1kyi/9ZMov/WTKL/1Yu
+        if9BFXr/PhF4/z4ReP8+EXj/PA93/zwPd/88D3f/PA93/zwPd/88D3f/PA93/zwPd/88D3f/PA93/zwP
+        d/88D3f/PA93/zwPd/88D3f/PA93/zwPd/88D3f/PA93/zwPd/88D3f/PA93/zwPd/88D3f/PA93/zwP
+        d/88D3f/PA93/z4ReP8+EXj/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
